@@ -2,7 +2,7 @@
 
 $file_to_test = realpath('./../../library/Peak/Router.php');
 include($file_to_test);
-echo 'Tested file: '.$file_to_test;
+echo 'Tested file: '.$file_to_test.'<br />';
 
 class TestOfRouter extends UnitTestCase
 {
@@ -10,7 +10,10 @@ class TestOfRouter extends UnitTestCase
     function testOfInitRouter()
     {
         
-        $router = new Peak_Router('peakdev/tests/router');
+    	global $curpath;
+    	$server = $_SERVER['DOCUMENT_ROOT'];
+    	$path = str_replace($server,'',$curpath);
+        $router = new Peak_Router($path);
         
         
         $this->assertTrue(is_a($router,'Peak_Router') ,'$router is not an object of router class');
@@ -45,108 +48,4 @@ class TestOfRouter extends UnitTestCase
     
     
 
-}
-
-
-
-class Ro1uter {
-  static protected $instance;
-  static protected $controller;
-  static protected $action;
-  static protected $params;
-  static protected $rules;
- 
-  public static function getInstance() {
-    if (isset(self::$instance) and (self::$instance instanceof self)) {
-      return self::$instance;
-    } else {
-      self::$instance = new self();
-      return self::$instance;
-    }
-  }
- 
-  private static function &arrayClean($array) {
-    foreach($array as $key => $value) {
-      if (strlen($value) == 0) unset($array[$key]);
-    }  
-  }
- 
-  private static function ruleMatch($rule, $data) {    
-    $ruleItems = explode('/',$rule); self::arrayClean($ruleItems);
-    $dataItems = explode('/',$data); self::arrayClean($dataItems);
- 
-    if (count($ruleItems) == count($dataItems)) {
-      $result = array();
- 
-      foreach($ruleItems as $ruleKey => $ruleValue) {
-        if (preg_match('/^:[\w]{1,}$/',$ruleValue)) {
-          $ruleValue = substr($ruleValue,1);
-          $result[$ruleValue] = $dataItems[$ruleKey];
-        }
-        else {
-          if (strcmp($ruleValue,$dataItems[$ruleKey]) != 0) {
-            return false;
-          }
-        }
-      }
- 
-      if (count($result) > 0) return $result;
-      unset($result);
-    }
-    return false;
-  }
- 
-  private static function defaultRoutes($url) {
-    // process default routes
-    $items = explode('/',$url);
- 
-    // remove empty blocks
-    foreach($items as $key => $value) {
-      if (strlen($value) == 0) unset($items[$key]);
-    }
- 
-    // extract data
-    if (count($items)) {
-      self::$controller = array_shift($items);
-      self::$action = array_shift($items);
-      self::$params = $items;
-    }
-  }
- 
-  protected function __construct() {
-    self::$rules = array();
-  }
- 
-  public static function init() {
-    $url = $_SERVER['REQUEST_URI'];
-    $isCustom = false;
- 
-    if (count(self::$rules)) {
-      foreach(self::$rules as $ruleKey => $ruleData) {
-        $params = self::ruleMatch($ruleKey,$url);
-        if ($params) {          
-          self::$controller = $ruleData['controller'];
-          self::$action = $ruleData['action'];
-          self::$params = $params;
-          $isCustom = true;
-          break;
-        }
-      }
-    }
- 
-    if (!$isCustom) self::defaultRoutes($url);
- 
-    if (!strlen(self::$controller)) self::$controller = 'home';
-    if (!strlen(self::$action)) self::$action = 'index';
-  }
- 
-  public static function addRule($rule, $target) {
-    self::$rules[$rule] = $target;
-  }
- 
- 
-  public static function getController() { return self::$controller; }
-  public static function getAction() { return self::$action; }
-  public static function getParams() { return self::$params; }
-  public static function getParam($id) { return self::$params[$id]; }
 }
